<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.create.CreateCompanyFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/create_company_title"
                android:layout_marginTop="20dp"/>

            <EditText
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                android:importantForAutofill="no"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/editText3"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                android:importantForAutofill="no"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/editText4"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                android:importantForAutofill="no"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/editText5"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                android:importantForAutofill="no"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/editText7"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:hint="@string/website"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                android:importantForAutofill="no"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/editText8"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:hint="@string/contact_name"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                android:importantForAutofill="no"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/editText9"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:hint="@string/contact_phone"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                android:importantForAutofill="no"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/editText10"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:hint="@string/contact_email"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                android:importantForAutofill="no"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/editText11"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:hint="@string/product"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                android:importantForAutofill="no"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/editText12"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:hint="@string/industry"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/create_button" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>